--- a/css/login.css
+++ b/css/login.css
@@ -1,17 +1,17 @@
 .text {
     text-align: center;
-    color:var(--green);
+    color: var(--green);
 }
 
-p {
-    
-    white-space: pre;
-    width: 20%;
-    height: 100%;
+main > p {
+    width: 45%;
+    height: auto;
     text-align: justify;
-    margin: 0px auto;
+    margin: 0 auto;
     float: none;
-    display: table;
+    display: block;
     color: var(--beige);
-    font-size: max(2.5vmin, 18px );
+    font-size: max(2.2vmin, 15px);
+    white-space: normal;
+    text-indent: 1em;
 }
