--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,18 @@
+/*Z-index list*/
+
+/*  #background: 1
+    #nav_menu: 9999
+    #nav_menu ul li a : 9998
+    #box : 9997
+    #banner : 9998
+    #right: 1000
+    #left : 1000
+    
+    */
+
 :root {
+
+    /*Colors*/
     --beige: rgb(233, 233, 206);
     --gradient: linear-gradient(110deg, rgb(21, 19, 31), rgb(98, 53, 124));
     --black: #000000;
@@ -9,20 +23,75 @@
     --white: #ffffff;
 }
 
+/*overall design changes*/
+
 * {
     box-sizing: border-box;
 }
 
 html,
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: sans-serif;
     width: 100%;
     margin: 0 auto;
-    background-size: cover;
     position: relative;
     color: var(--beige);
     scroll-behavior: smooth;
+ }   
+
+#background {
+    background: url(../img/background.jpg);
+    background-size: cover;
+    z-index: 1;
 }
+
+/*NAV MENU*/
+
+#nav_menu {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: var(--grey);
+    height: fit-content;
+    z-index: 9999;
+}
+
+
+#nav_menu ul {
+    list-style-type: none;
+    justify-content: center;
+    margin: auto;
+    padding: .1em;
+}
+
+#nav_menu ul li {
+    display: inline-block;
+    float: none;
+}
+
+#nav_menu ul li a {
+    display: block;
+    text-align: center;
+    width: 8rem;
+    text-decoration: none;
+    background: var(--gradient);
+    color: #d6c4c4;
+    font-size: max(1.5em, 12px);
+    font-weight: bold;
+    border-right: .2em solid rgb(18, 14, 14);
+    z-index: 9999;
+}
+
+#nav_menu ul li a:hover {
+    background-color: rgb(47, 14, 94);
+    color: var(--yellow);
+}
+
+#nav_menu ul li a.lastitem {
+    border-right: none;
+}
+
+/* Banner*/
 
 #box {
     width: 100%;
@@ -31,7 +100,7 @@ body {
     overflow: hidden;
     background-image: url(../img/bannerback.jpg);
     background-size: 40em;
-    z-index: 11;
+    z-index: 9997;
 }
 
 #banner {
@@ -41,16 +110,10 @@ body {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: 10;
+    z-index: 9998;
 }
 
-body {
-    background: url(../img/background.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: repeat-y;
-    z-index: 1;
-}
+/* Sidebars*/
 
 #left {
     width: 5%;
@@ -58,7 +121,7 @@ body {
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 9999;
+    z-index: 1000;
 }
 
 #right {
@@ -67,89 +130,42 @@ body {
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 9999;
-}
-
-#nav_menu {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: var(--grey);
-    height: fit-content;
     z-index: 1000;
 }
 
-
-#nav_menu ul {
-    list-style-type: none;
-    margin: auto;
-    padding: .1em;
-}
-
-#nav_menu ul li {
-    float: none;
-    display: inline-block;
-}
-
-#nav_menu ul li a {
-    text-align: center;
-    display: block;
-    width: 10rem;
-    padding: .5vh;
-    text-decoration: none;
-    background: var(--gradient);
-    color: #d6c4c4;
-    font-size: max(1.5em, 14px);
-    font-weight: bold;
-    border-right: .2em solid rgb(18, 14, 14);
-    z-index: 100;
-}
-
-#nav_menu ul li a:hover {
-    background-color: rgb(47, 14, 94);
-    color: var(--yellow);
-    z-index: 101;
-
-}
-
-#nav_menu ul li a.lastitem {
-    border-right: none;
-}
+/*footer/disclaimer*/
 
 .bs {
-   background-color: #000000;
-   width: 100%;
+    background-color: #000000;
+    width: 100%;
 }
 
-.footer-box{ 
+.footer-box {
+    width: 30%;
     margin: 0 auto;
 }
 
-.footer-text{ 
+.footer-text {
+    width: 30vw;
+    font-size: .8em;
     margin-top: 3em;
-    margin-left: auto;
-    margin-right: auto;
-    width: 20vh;
     text-align: center;
-    font-size: 1rem;
     color: #ffffff;
 }
 
+
+/* MEDIA QUERIES*/
 
 @media screen and (max-width: 1165px) {
     #box {
         height: 300px;
     }
-
 }
 
-
 @media screen and (max-width:720px) {
-   
     #nav_menu ul {
         font-size: 0.6rem;
         height: auto;
-
     }
 
     #nav_menu ul li a {
@@ -163,13 +179,11 @@ body {
         background-color: var(--grey);
         margin-bottom: 3%;
         margin-top: 0%;
-
     }
 
     #banner {
         background-image: url(../img/bannermedium.jpg);
     }
-
 }
 
 @media screen and (max-width:590px) {
